Fixed text wrapping issue in message box

--- a/views/css/main.css
+++ b/views/css/main.css
@@ -52,6 +52,7 @@ hr {
     padding: 15px;
     overflow-y: auto;
     height: 400px;
+    word-wrap: break-word;
 }
 
 .media-heading {
